fix: denote that this is still WIP

--- a/LBM_pypline.ipynb
+++ b/LBM_pypline.ipynb
@@ -234,10 +234,10 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "cell_type": "markdown",
+   "source": [
+    "## !!! Work in Progress"
+   ],
    "metadata": {
     "collapsed": false
    }
