--- a/nb/demo_motion_correction.ipynb
+++ b/nb/demo_motion_correction.ipynb
@@ -121,7 +121,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%% start the cluster (if a cluster already exists terminate it)\n",
+    "##%% start the cluster (if a cluster already exists terminate it)\n",
     "if 'dview' in locals():\n",
     "    cm.stop_server(dview=dview)\n",
     "c, dview, n_processes = cm.cluster.setup_cluster(\n",
@@ -185,7 +185,7 @@
     "# load motion corrected movie\n",
     "m_rig = cm.load(mc.mmap_file)\n",
     "bord_px_rig = np.ceil(np.max(mc.shifts_rig)).astype(int)\n",
-    "#%% visualize templates\n",
+    "##%% visualize templates\n",
     "plt.figure(figsize = (20,10))\n",
     "plt.imshow(mc.total_template_rig, cmap = 'gray')"
    ]
@@ -198,7 +198,7 @@
    },
    "outputs": [],
    "source": [
-    "#%% inspect movie\n",
+    "##%% inspect movie\n",
     "m_rig.resize(1, 1, downsample_ratio).play(\n",
     "    q_max=99.5, fr=30, magnification=2, bord_px = 0*bord_px_rig) # press q to exit"
    ]
@@ -212,11 +212,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-09-03T20:13:45.128823Z",
+     "start_time": "2023-09-03T20:13:44.940230Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'plt' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[1], line 2\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;66;03m##%% plot rigid shifts\u001B[39;00m\n\u001B[0;32m----> 2\u001B[0m \u001B[43mplt\u001B[49m\u001B[38;5;241m.\u001B[39mclose()\n\u001B[1;32m      3\u001B[0m plt\u001B[38;5;241m.\u001B[39mfigure(figsize \u001B[38;5;241m=\u001B[39m (\u001B[38;5;241m20\u001B[39m,\u001B[38;5;241m10\u001B[39m))\n\u001B[1;32m      4\u001B[0m plt\u001B[38;5;241m.\u001B[39mplot(mc\u001B[38;5;241m.\u001B[39mshifts_rig)\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'plt' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "#%% plot rigid shifts\n",
+    "##%% plot rigid shifts\n",
     "plt.close()\n",
     "plt.figure(figsize = (20,10))\n",
     "plt.plot(mc.shifts_rig)\n",
@@ -240,7 +257,7 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "#%% motion correct piecewise rigid\n",
+    "##%% motion correct piecewise rigid\n",
     "mc.pw_rigid = True  # turn the flag to True for pw-rigid motion correction\n",
     "mc.template = mc.mmap_file  # use the template obtained before to save in computation (optional)\n",
     "\n",
@@ -283,7 +300,7 @@
    },
    "outputs": [],
    "source": [
-    "#%% visualize elastic shifts\n",
+    "##%% visualize elastic shifts\n",
     "plt.close()\n",
     "plt.figure(figsize = (20,10))\n",
     "plt.subplot(2, 1, 1)\n",
@@ -293,7 +310,7 @@
     "plt.plot(mc.y_shifts_els)\n",
     "plt.ylabel('y_shifts (pixels)')\n",
     "plt.xlabel('frames')\n",
-    "#%% compute borders to exclude\n",
+    "##%% compute borders to exclude\n",
     "bord_px_els = np.ceil(np.maximum(np.max(np.abs(mc.x_shifts_els)),\n",
     "                                 np.max(np.abs(mc.y_shifts_els)))).astype(int)"
    ]
@@ -404,7 +421,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%% plot the results of Residual Optical Flow\n",
+    "##%% plot the results of Residual Optical Flow\n",
     "fls = [cm.paths.fname_derived_presuffix(mc.fname_tot_els[0], 'metrics', swapsuffix='npz'),\n",
     "       cm.paths.fname_derived_presuffix(mc.fname_tot_rig[0], 'metrics', swapsuffix='npz'),\n",
     "       cm.paths.fname_derived_presuffix(mc.fname[0],         'metrics', swapsuffix='npz'),\n",
