nb changes, better m_correction

--- a/nb/demo_online_3D.ipynb
+++ b/nb/demo_online_3D.ipynb
@@ -249,7 +249,7 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "#%% start a cluster for parallel processing (if a cluster already exists it will be closed and a new session will be opened)\n",
+    "##%% start a cluster for parallel processing (if a cluster already exists it will be closed and a new session will be opened)\n",
     "if 'dview' in locals():\n",
     "    cm.stop_server(dview=dview)\n",
     "c, dview, n_processes = cm.cluster.setup_cluster(\n",
