Fix regex, add more motion correction, rm redundant code

--- a/nb/demo_pipeline_cnmfE.ipynb
+++ b/nb/demo_pipeline_cnmfE.ipynb
@@ -131,15 +131,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
+    "scrolled": true,
     "ExecuteTime": {
-     "end_time": "2023-09-03T18:58:02.837405Z",
-     "start_time": "2023-09-03T18:57:54.363086Z"
-    },
-    "scrolled": true
+     "end_time": "2023-09-08T02:33:13.353938300Z",
+     "start_time": "2023-09-08T02:33:12.998521100Z"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'fnames' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[1], line 16\u001B[0m\n\u001B[0;32m     12\u001B[0m max_deviation_rigid \u001B[38;5;241m=\u001B[39m \u001B[38;5;241m3\u001B[39m  \u001B[38;5;66;03m# maximum deviation allowed for patch with respect to rigid shifts\u001B[39;00m\n\u001B[0;32m     13\u001B[0m border_nan \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mcopy\u001B[39m\u001B[38;5;124m'\u001B[39m      \u001B[38;5;66;03m# replicate values along the boundaries\u001B[39;00m\n\u001B[0;32m     15\u001B[0m mc_dict \u001B[38;5;241m=\u001B[39m {\n\u001B[1;32m---> 16\u001B[0m     \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mfnames\u001B[39m\u001B[38;5;124m'\u001B[39m: \u001B[43mfnames\u001B[49m,\n\u001B[0;32m     17\u001B[0m     \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mfr\u001B[39m\u001B[38;5;124m'\u001B[39m: frate,\n\u001B[0;32m     18\u001B[0m     \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mdecay_time\u001B[39m\u001B[38;5;124m'\u001B[39m: decay_time,\n\u001B[0;32m     19\u001B[0m     \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mpw_rigid\u001B[39m\u001B[38;5;124m'\u001B[39m: pw_rigid,\n\u001B[0;32m     20\u001B[0m     \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mmax_shifts\u001B[39m\u001B[38;5;124m'\u001B[39m: max_shifts,\n\u001B[0;32m     21\u001B[0m     \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mgSig_filt\u001B[39m\u001B[38;5;124m'\u001B[39m: gSig_filt,\n\u001B[0;32m     22\u001B[0m     \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mstrides\u001B[39m\u001B[38;5;124m'\u001B[39m: strides,\n\u001B[0;32m     23\u001B[0m     \u001B[38;5;124m'\u001B[39m\u001B[38;5;124moverlaps\u001B[39m\u001B[38;5;124m'\u001B[39m: overlaps,\n\u001B[0;32m     24\u001B[0m     \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mmax_deviation_rigid\u001B[39m\u001B[38;5;124m'\u001B[39m: max_deviation_rigid,\n\u001B[0;32m     25\u001B[0m     \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mborder_nan\u001B[39m\u001B[38;5;124m'\u001B[39m: border_nan\n\u001B[0;32m     26\u001B[0m }\n\u001B[0;32m     28\u001B[0m opts \u001B[38;5;241m=\u001B[39m params\u001B[38;5;241m.\u001B[39mCNMFParams(params_dict\u001B[38;5;241m=\u001B[39mmc_dict)\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'fnames' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# dataset dependent parameters\n",
     "frate = 10                       # movie frame rate\n",
