--- a/nb/demo_pipeline_voltage_imaging.ipynb
+++ b/nb/demo_pipeline_voltage_imaging.ipynb
@@ -496,8 +496,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "background_save": true
+    },
+    "id": "jv9zCNpbHRoO"
+   },
+   "outputs": [],
    "source": [
-    "#%% Reuse spatial weights extracted from previous video\n",
     "# set weights = reuse_weights in opts_dict dictionary\n",
     "if False:\n",
     "    estimates = np.load(os.path.join(file_dir, save_name+'.npy'), allow_pickle=True).item()\n",
@@ -512,12 +523,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {
-     "background_save": true
-    },
-    "id": "jv9zCNpbHRoO"
-   },
    "outputs": [],
    "source": [
     "# Stop cluster and clean up log files\n",
@@ -525,7 +530,10 @@
     "log_files = glob.glob('*_LOG_*')\n",
     "for log_file in log_files:\n",
     "    os.remove(log_file)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
